k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactjs-app
  namespace: dev
spec:
  replicas: 12
  selector:
    matchLabels:
      app: reactjs-app
  template:
    metadata:
      labels:
        app: reactjs-app
    spec:
      containers:
      - name: reactjs-app
        image: imran177/travel-app
        ports:
        - containerPort: 80
