k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactjs-app-service
  namespace: dev
spec:
  selector:
    app: reactjs-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 32000
  type: NodePort
